reference/v4/About/TOC.md
# about_Aliases
## [about_Aliases](about_Aliases.md)
# about_Arithmetic_Oper
## [about_Arithmetic_Operators](about_Arithmetic_Operators.md)
# about_Arrays
## [about_Arrays](about_Arrays.md)
# about_Assignment_Oper
## [about_Assignment_Operators](about_Assignment_Operators.md)
# about_Automatic_Varia
## [about_Automatic_Variables](about_Automatic_Variables.md)
# about_Break
## [about_Break](about_Break.md)
# about_Command_Precede
## [about_Command_Precedence](about_Command_Precedence.md)
# about_Command_Syntax
## [about_Command_Syntax](about_Command_Syntax.md)
# about_Comment_Based_H
## [about_Comment_Based_Help](about_Comment_Based_Help.md)
# about_CommonParameter
## [about_CommonParameters](about_CommonParameters.md)
# about_Comparison_Oper
## [about_Comparison_Operators](about_Comparison_Operators.md)
# about_Continue
## [about_Continue](about_Continue.md)
# about_Core_Commands
## [about_Core_Commands](about_Core_Commands.md)
# about_Data_Sections
## [about_Data_Sections](about_Data_Sections.md)
# about_Debuggers
## [about_Debuggers](about_Debuggers.md)
# about_Do
## [about_Do](about_Do.md)
# about_DSC
## [about_DesiredStateConfiguration](about_DesiredStateConfiguration.md)
# about_DSCLogResource
## [about_DSCLogResource](about_DSCLogResource.md)
# about_Environment_Var
## [about_Environment_Variables](about_Environment_Variables.md)
# about_Escape_Characte
## [about_Escape_Characters](about_Escape_Characters.md)
# about_Eventlogs
## [about_Eventlogs](about_Eventlogs.md)
# about_Execution_Polic
## [about_Execution_Policies](about_Execution_Policies.md)
# about_For
## [about_For](about_For.md)
# about_Foreach
## [about_ForEach](about_ForEach.md)
# about_Format.ps1xml
## [about_Format.ps1xml](about_Format.ps1xml.md)
# about_Functions
## [about_Functions](about_Functions.md)
# about_Functions_Adv_M
## [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)
# about_Functions_Adv_P
## [about_Functions_Advanced_Parameters](about_Functions_Advanced_Parameters.md)
# about_Functions_Advan
## [about_Functions_Advanced](about_Functions_Advanced.md)
# about_Functions_Cmdle
## [about_Functions_CmdletBindingAttribute](about_Functions_CmdletBindingAttribute.md)
# about_Functions_Outpu
## [about_Functions_OutputTypeAttribute](about_Functions_OutputTypeAttribute.md)
# about_GP_Settings
## [about_Group_Policy_Settings](about_Group_Policy_Settings.md)
# about_Hash_Tables
## [about_Hash_Tables](about_Hash_Tables.md)
# about_History
## [about_History](about_History.md)
# about_If
## [about_If](about_If.md)
# about_Job_Details
## [about_Job_Details](about_Job_Details.md)
# about_Jobs
## [about_Jobs](about_Jobs.md)
# about_Join
## [about_Join](about_Join.md)
# about_Language_Keywor
## [about_Language_Keywords](about_Language_Keywords.md)
# About_Language_Modes
## [about_Language_Modes](about_Language_Modes.md)
# about_Line_Editing
## [about_Line_Editing](about_Line_Editing.md)
# about_Locations
## [about_Locations](about_Locations.md)
# about_Logical_Operato
## [about_Logical_Operators](about_Logical_Operators.md)
# about_Methods
## [about_Methods](about_Methods.md)
# about_Modules
## [about_Modules](about_Modules.md)
# about_Object_Creation
## [about_Object_Creation](about_Object_Creation.md)
# about_Objects
## [about_Objects](about_Objects.md)
# about_Operator_Preced
## [about_Operator_Precedence](about_Operator_Precedence.md)
# about_Operators
## [about_Operators](about_Operators.md)
# about_Parameters
## [about_Parameters](about_Parameters.md)
# About_Params_Def_Vals
## [about_Parameters_Default_Values](about_Parameters_Default_Values.md)
# about_Parsing
## [about_Parsing](about_Parsing.md)
# about_Path_Syntax
## [about_Path_Syntax](about_Path_Syntax.md)
# about_Pipelines
## [about_Pipelines](about_Pipelines.md)
# about_Preference_Vari
## [about_Preference_Variables](about_Preference_Variables.md)
# about_Profiles
## [about_Profiles](about_Profiles.md)
# about_Prompts
## [about_Prompts](about_Prompts.md)
# about_Properties
## [about_Properties](about_Properties.md)
# about_Providers
## [about_Providers](about_Providers.md)
# about_PS_exe
## [about_PowerShell.exe](about_PowerShell.exe.md)
# about_PS_Ise_exe
## [about_PowerShell_Ise.exe](about_PowerShell_Ise.exe.md)
# about_PSConsoleHostRL
## [about_PSConsoleHostReadLine](about_PSConsoleHostReadLine.md)
# about_PSSession_Detai
## [about_PSSession_Details](about_PSSession_Details.md)
# about_PSSessions
## [about_PSSessions](about_PSSessions.md)
# about_PSSnapins
## [about_PSSnapins](about_PSSnapins.md)
# about_Quoting_Rules
## [about_Quoting_Rules](about_Quoting_Rules.md)
# about_Redirection
## [about_Redirection](about_Redirection.md)
# about_Ref
## [about_Ref](about_Ref.md)
# about_Regular_Express
## [about_Regular_Expressions](about_Regular_Expressions.md)
# about_Remote
## [about_Remote](about_Remote.md)
# about_Remote_Disconn
## [about_Remote_Disconnected_Sessions](about_Remote_Disconnected_Sessions.md)
# about_Remote_FAQ
## [about_Remote_FAQ](about_Remote_FAQ.md)
# about_Remote_Jobs
## [about_Remote_Jobs](about_Remote_Jobs.md)
# about_Remote_Output
## [about_Remote_Output](about_Remote_Output.md)
# about_Remote_Requirem
## [about_Remote_Requirements](about_Remote_Requirements.md)
# about_Remote_Troubles
## [about_Remote_Troubleshooting](about_Remote_Troubleshooting.md)
# about_Remote_Variable
## [about_Remote_Variables](about_Remote_Variables.md)
# about_Requires
## [about_Requires](about_Requires.md)
# about_Reserved_Words
## [about_Reserved_Words](about_Reserved_Words.md)
# about_Return
## [about_Return](about_Return.md)
# about_Run_With_PShell
## [about_Run_With_PowerShell](about_Run_With_PowerShell.md)
# about_SchedJobs_Adv
## [about_Scheduled_Jobs_Advanced](about_Scheduled_Jobs_Advanced.md)
# about_SchedJobs_Basic
## [about_Scheduled_Jobs_Basics](about_Scheduled_Jobs_Basics.md)
# about_SchedJobs_TS
## [about_Scheduled_Jobs_Troubleshooting](about_Scheduled_Jobs_Troubleshooting.md)
# about_Scheduled_Jobs
## [about_Scheduled_Jobs](about_Scheduled_Jobs.md)
# about_Scopes
## [about_Scopes](about_Scopes.md)
# about_Script_Blocks
## [about_Script_Blocks](about_Script_Blocks.md)
# about_Script_Internat
## [about_Script_Internationalization](about_Script_Internationalization.md)
# about_Scripts
## [about_Scripts](about_Scripts.md)
# about_SesConfig_Files
## [about_Session_Configuration_Files](about_Session_Configuration_Files.md)
# about_Session_Configu
## [about_Session_Configurations](about_Session_Configurations.md)
# about_Signing
## [about_Signing](about_Signing.md)
# about_Simplified_Synt
## [about_Simplified_Syntax](about_Simplified_Syntax.md)
# about_Special_Charact
## [about_Special_Characters](about_Special_Characters.md)
# about_Splatting
## [about_Splatting](about_Splatting.md)
# about_Split
## [about_Split](about_Split.md)
# about_Switch
## [about_Switch](about_Switch.md)
# about_Throw
## [about_Throw](about_Throw.md)
# about_Transactions
## [about_Transactions](about_Transactions.md)
# about_Trap
## [about_Trap](about_Trap.md)
# about_Try_Catch_Final
## [about_Try_Catch_Finally](about_Try_Catch_Finally.md)
# about_Type_Accelerato
## [about_Type_Accelerators](about_Type_Accelerators.md)
# about_Type_Operators
## [about_Type_Operators](about_Type_Operators.md)
# about_Types.ps1xml
## [about_Types.ps1xml](about_Types.ps1xml.md)
# about_Updatable_Help
## [about_Updatable_Help](about_Updatable_Help.md)
# about_Variables
## [about_Variables](about_Variables.md)
# about_WF_Common_Param
## [about_WorkflowCommonParameters](about_WorkflowCommonParameters.md)
# about_WFActivityComP
## [about_ActivityCommonParameters](about_ActivityCommonParameters.md)
# about_WFCheckpoint-WF
## [about_Checkpoint-Workflow](about_Checkpoint-Workflow.md)
# about_WFForE-Parallel
## [about_Foreach-Parallel](about_Foreach-Parallel.md)
# about_WFInlineScript
## [about_InlineScript](about_InlineScript.md)
# about_WFParallel
## [about_Parallel](about_Parallel.md)
# about_WFSequence
## [about_Sequence](about_Sequence.md)
# about_WFSuspend-WF
## [about_Suspend-Workflow](about_Suspend-Workflow.md)
# about_While
## [about_While](about_While.md)
# about_Wildcards
## [about_Wildcards](about_Wildcards.md)
# about_Windows_PS_4.0
## [about_Windows_PowerShell_4.0](about_Windows_PowerShell_4.0.md)
# about_Windows_PS_ISE
## [about_Windows_PowerShell_ISE](about_Windows_PowerShell_ISE.md)
# about_Windows_RT
## [about_Windows_RT](about_Windows_RT.md)
# about_WMI
## [about_WMI](about_WMI.md)
# about_WMI_Cmdlets
## [about_WMI_Cmdlets](about_WMI_Cmdlets.md)
# about_Workflows
## [about_Workflows](about_Workflows.md)
# about_WQL
## [about_WQL](about_WQL.md)
# about_WS-Man_Cmdlets
## [about_WS-Management_Cmdlets](about_WS-Management_Cmdlets.md)
# default
## [default](default.md)
# PS_Core_Functions
## [Clear-Host](Clear-Host.md)
## [Get-Verb](Get-Verb.md)
# PS_Core_Providers
## [Alias Provider](Alias-Provider.md)
## [Certificate Provider](Certificate-Provider.md)
### [Get-ChildItem for Certificate](Get-ChildItem-for-Certificate.md)
### [Move-Item for Certificate](Move-Item-for-Certificate.md)
### [New-Item for Certificate](New-Item-for-Certificate.md)
### [Remove-Item for Certificate](Remove-Item-for-Certificate.md)
## [Environment Provider](Environment-Provider.md)
## [FileSystem Provider](FileSystem-Provider.md)
### [Add-Content for FileSystem](Add-Content-for-FileSystem.md)
### [Clear-Content for FileSystem](Clear-Content-for-FileSystem.md)
### [Get-ChildItem for FileSystem](Get-ChildItem-for-FileSystem.md)
### [Get-Content for FileSystem](Get-Content-for-FileSystem.md)
### [Get-Item for FileSystem](Get-Item-for-FileSystem.md)
### [Remove-Item for FileSystem](Remove-Item-for-FileSystem.md)
### [Set-Content for FileSystem](Set-Content-for-FileSystem.md)
### [Test-Path for FileSystem](Test-Path-for-FileSystem.md)
## [Function Provider](Function-Provider.md)
## [Registry Provider](Registry-Provider.md)
## [Variable Provider](Variable-Provider.md)
## [WSMan Provider](WSMan-Provider.md)
### [New-Item for ClientCertificate](New-Item-for-ClientCertificate.md)
### [New-Item for InitializationParameters](New-Item-for-InitializationParameters.md)
### [New-Item for Listener](New-Item-for-Listener.md)
### [New-Item for Plugin](New-Item-for-Plugin.md)
### [New-Item for Resources](New-Item-for-Resources.md)
### [New-Item for Security](New-Item-for-Security.md)
